--- a/style.css
+++ b/style.css
@@ -747,7 +747,6 @@ h4,
 h5,
 h6 {
 	font-family: "Helvetica Neue", sans-serif;
-	clear: both;
 	font-weight: 700;
 	margin: 0 0 0.618em;
 	color: #303236;
